--- a/sass/main.css
+++ b/sass/main.css
@@ -577,3 +577,23 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 70%; }
+
+body.preloader-site {
+  overflow: hidden; }
+
+.preloader-wrapper {
+  height: 100%;
+  width: 100%;
+  background: #262626;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999999; }
+
+.preloader-wrapper .preloader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+  .preloader-wrapper .preloader img {
+    border-radius: 25px; }
